# Kajitafirst.github.io

./: CNAME  LICENSE  README.md  audible.py  convert_params.py  dataset.py  hoshinoza.jpg:Zone.Identifier  index.html  main.py  model.py  package-lock.json  package.json  pyproject.toml  qgan_audible.ipynb  qgan_result.ipynb  requirements.txt  vite.config.ts
audible_output/: quantum_drums.mid
docs/: index.css  index.html
docs/data/: params.json
docs/js/: app.js  audio-engine.js  quantum-sim.js  visualizer.js
experiment/CrashN16_mps_L3_V2/: accuracy.npy  kl_div.npy  loss_dis.npy  loss_gen.npy  param.yaml  run.sh  theta_val.npy
experiment/DrumN16_mps_L3_V2/: run.sh
experiment/HHN16_mps_L3_V2/: accuracy.npy  kl_div.npy  loss_dis.npy  loss_gen.npy  param.yaml  run.sh  run.sh.o140031  theta_val.npy
experiment/KickN16_mps_L3_V2/: accuracy.npy  kl_div.npy  loss_dis.npy  loss_gen.npy  param.yaml  run.sh  theta_val.npy
experiment/MarcovN16_mps_L3_V2/: kl_div.npy  logfile.logZone.Identifier  loss_dis.npy  loss_gen.npy  param.yaml  run.sh  theta_val.npy
experiment/RideN16_mps_L3_V2/: accuracy.npy  kl_div.npy  loss_dis.npy  loss_gen.npy  param.yaml  run.sh  run.sh.o139863  theta_val.npy
experiment/SnareN16_mps_L3_V2/: accuracy.npy  kl_div.npy  loss_dis.npy  loss_gen.npy  param.yaml  run.sh  run.sh.o136962  theta_val.npy
experiment/TomN16_mps_L3_V2/: accuracy.npy  kl_div.npy  loss_dis.npy  loss_gen.npy  run.sh  run.sh.o140034  theta_val.npy
src/: App.css  App.tsx  index.css
src/components/: Hero.tsx  SocialLinks.css  SocialLinks.tsx  StarBackground.css  (+3 more)
(+1 files in other folders)
